crates/sidex-syntax/src/snapshots/sidex_syntax__parser__tests__test_multi_service.snap
---
source: crates/sidex-syntax/src/parser.rs
expression: result
---
Some(
    Schema {
        docs: Docs(
            [],
        ),
        items: [
            Import(
                Import {
                    tree: From {
                        path: Path {
                            segments: [
                                Name(
                                    Node {
                                        inner: "data",
                                        span: Span {
                                            src: SourceId(
                                                0,
                                            ),
                                            range: 9..13,
                                        },
                                    },
                                ),
                            ],
                            is_absolute: true,
                        },
                        trees: [
                            Path(
                                Path {
                                    segments: [
                                        Name(
                                            Node {
                                                inner: "ids",
                                                span: Span {
                                                    src: SourceId(
                                                        0,
                                                    ),
                                                    range: 16..19,
                                                },
                                            },
                                        ),
                                    ],
                                    is_absolute: false,
                                },
                            ),
                            Path(
                                Path {
                                    segments: [
                                        Name(
                                            Node {
                                                inner: "person",
                                                span: Span {
                                                    src: SourceId(
                                                        0,
                                                    ),
                                                    range: 21..27,
                                                },
                                            },
                                        ),
                                        Name(
                                            Node {
                                                inner: "Person",
                                                span: Span {
                                                    src: SourceId(
                                                        0,
                                                    ),
                                                    range: 29..35,
                                                },
                                            },
                                        ),
                                    ],
                                    is_absolute: false,
                                },
                            ),
                        ],
                    },
                },
            ),
            Def(
                Def {
                    name: Name(
                        Node {
                            inner: "GetPersonResult",
                            span: Span {
                                src: SourceId(
                                    0,
                                ),
                                range: 85..100,
                            },
                        },
                    ),
                    docs: Docs(
                        [
                            Node {
                                inner: " Result type for [`get_person_by_id`].",
                                span: Span {
                                    src: SourceId(
                                        0,
                                    ),
                                    range: 38..80,
                                },
                            },
                        ],
                    ),
                    vars: [],
                    attrs: [],
                    kind: Enum(
                        EnumDef {
                            variants: [
                                EnumVariant {
                                    name: Name(
                                        Node {
                                            inner: "NotFound",
                                            span: Span {
                                                src: SourceId(
                                                    0,
                                                ),
                                                range: 162..170,
                                            },
                                        },
                                    ),
                                    docs: Docs(
                                        [
                                            Node {
                                                inner: " A person with the provided id cannot be found.",
                                                span: Span {
                                                    src: SourceId(
                                                        0,
                                                    ),
                                                    range: 107..158,
                                                },
                                            },
                                        ],
                                    ),
                                    attrs: [],
                                    typ: None,
                                },
                                EnumVariant {
                                    name: Name(
                                        Node {
                                            inner: "Found",
                                            span: Span {
                                                src: SourceId(
                                                    0,
                                                ),
                                                range: 230..235,
                                            },
                                        },
                                    ),
                                    docs: Docs(
                                        [
                                            Node {
                                                inner: " A person with the provided id has been found.",
                                                span: Span {
                                                    src: SourceId(
                                                        0,
                                                    ),
                                                    range: 176..226,
                                                },
                                            },
                                        ],
                                    ),
                                    attrs: [],
                                    typ: Some(
                                        Instance(
                                            InstanceTypeExpr {
                                                path: Path {
                                                    segments: [
                                                        Name(
                                                            Node {
                                                                inner: "Person",
                                                                span: Span {
                                                                    src: SourceId(
                                                                        0,
                                                                    ),
                                                                    range: 237..243,
                                                                },
                                                            },
                                                        ),
                                                    ],
                                                    is_absolute: false,
                                                },
                                                subst: [],
                                            },
                                        ),
                                    ),
                                },
                            ],
                        },
                    ),
                },
            ),
            Def(
                Def {
                    name: Name(
                        Node {
                            inner: "Api",
                            span: Span {
                                src: SourceId(
                                    0,
                                ),
                                range: 256..259,
                            },
                        },
                    ),
                    docs: Docs(
                        [],
                    ),
                    vars: [],
                    attrs: [],
                    kind: Service(
                        ServiceDef {
                            functions: [
                                Function {
                                    name: Name(
                                        Node {
                                            inner: "get_person_by_id",
                                            span: Span {
                                                src: SourceId(
                                                    0,
                                                ),
                                                range: 306..322,
                                            },
                                        },
                                    ),
                                    docs: Docs(
                                        [
                                            Node {
                                                inner: " Lookup a person by it's id.",
                                                span: Span {
                                                    src: SourceId(
                                                        0,
                                                    ),
                                                    range: 266..298,
                                                },
                                            },
                                        ],
                                    ),
                                    attrs: [],
                                    params: [
                                        FunctionParam {
                                            name: Name(
                                                Node {
                                                    inner: "id",
                                                    span: Span {
                                                        src: SourceId(
                                                            0,
                                                        ),
                                                        range: 323..325,
                                                    },
                                                },
                                            ),
                                            typ: Instance(
                                                InstanceTypeExpr {
                                                    path: Path {
                                                        segments: [
                                                            Name(
                                                                Node {
                                                                    inner: "ids",
                                                                    span: Span {
                                                                        src: SourceId(
                                                                            0,
                                                                        ),
                                                                        range: 327..330,
                                                                    },
                                                                },
                                                            ),
                                                            Name(
                                                                Node {
                                                                    inner: "PersonId",
                                                                    span: Span {
                                                                        src: SourceId(
                                                                            0,
                                                                        ),
                                                                        range: 332..340,
                                                                    },
                                                                },
                                                            ),
                                                        ],
                                                        is_absolute: false,
                                                    },
                                                    subst: [],
                                                },
                                            ),
                                            is_optional: false,
                                        },
                                    ],
                                    returns: Instance(
                                        InstanceTypeExpr {
                                            path: Path {
                                                segments: [
                                                    Name(
                                                        Node {
                                                            inner: "GetPersonResult",
                                                            span: Span {
                                                                src: SourceId(
                                                                    0,
                                                                ),
                                                                range: 345..360,
                                                            },
                                                        },
                                                    ),
                                                ],
                                                is_absolute: false,
                                            },
                                            subst: [],
                                        },
                                    ),
                                },
                            ],
                        },
                    ),
                },
            ),
        ],
    },
)
